deployments/kubernetes/minikube/minio/minio-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: web3
  labels:
    app: minio
spec:
  serviceName: minio-headless
  replicas: 6
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2024-01-18T22-51-28Z
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - |
              minio server http://minio-{0...5}.minio-headless.web3.svc.cluster.local/data --console-address :9001
          ports:
            - containerPort: 9000
              name: api
            - containerPort: 9001
              name: console
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 10Gi
