deployments/kubernetes/minikube/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-headless
  namespace: web3
  labels:
    app: minio
spec:
  clusterIP: None
  ports:
    - port: 9000
      name: api
    - port: 9001
      name: console
  selector:
    app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: web3
  labels:
    app: minio
spec:
  type: ClusterIP
  ports:
    - port: 9000
      name: api
    - port: 9001
      name: console
  selector:
    app: minio
